2006-03-15  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/util/jar/JarFile/basic.java (test_jar): Log
	exception when -debug.

2006-03-15  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/getComponentAt.java:
	New Class

2006-03-15  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/addImpl.java
	(test1): Removed repaint function. Only need one. Also,
	added repaint functions to all the components.
	(test2): Added a lightweight container to the panel to 
	show that repaint is not called on it. Also, added a check
	to show that repaint is not called on the frame when it is 
	shown.

2006-03-15  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Container/addImpl.java
	(test): Changed to call new functions.
	(test1): Moved old test to new function.
	(test2): New function to test if repaint is called when a component
	is added to a showing component.

2006-03-15  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JInternalFrame/setSelected.java:
	Added test for bound property.
	* gnu/testlet/javax/swing/JInternalFrame/setResizable.java:
	Added test for bound property.
	* gnu/testlet/javax/swing/JInternalFrame/setMaximizable.java:
	Added test for bound property.
	* gnu/testlet/javax/swing/JInternalFrame/setIconifiable.java:
	Added test for bound property.
	* gnu/testlet/javax/swing/JInternalFrame/setClosed.java:
	Added test for bound property.
	* gnu/testlet/javax/swing/JInternalFrame/setClosable.java:
	Added test for bound property.

2006-03-15  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/TableColumn/sizeWidthToFit.java:
	New file.

2006-03-15  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/logging/Level/parse.java (test): Add "new"
	string object to parse.

2006-03-15  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/TableColumn/addPropertyChangeListener.java:
	New file,